[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/menu.gd" type="Script" id=1]
[ext_resource path="res://defaultTheme.tres" type="Theme" id=2]
[ext_resource path="res://images/gameTitle.png" type="Texture" id=3]
[ext_resource path="res://scenes/starBackground.tscn" type="PackedScene" id=4]
[ext_resource path="res://environments/mainMenuEnv.tres" type="Environment" id=5]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 778.0
margin_top = 282.0
margin_right = 1141.0
margin_bottom = 797.0
theme = ExtResource( 2 )

[node name="ButtonEasy" type="Button" parent="CenterContainer/VBoxContainer"]
margin_right = 363.0
margin_bottom = 110.0
theme = ExtResource( 2 )
action_mode = 0
text = "Easy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonCasual" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 135.0
margin_right = 363.0
margin_bottom = 245.0
theme = ExtResource( 2 )
text = "Casual"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonHard" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 270.0
margin_right = 363.0
margin_bottom = 380.0
theme = ExtResource( 2 )
text = "Hard"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonVeryHard" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 405.0
margin_right = 363.0
margin_bottom = 515.0
theme = ExtResource( 2 )
text = "Very Hard"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StarParticles" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 44.322, 0, -101.447 )

[node name="Camera" type="Camera" parent="."]
environment = ExtResource( 5 )
far = 1000.0

[node name="title" type="TextureRect" parent="."]
margin_left = 415.736
margin_top = 170.486
margin_right = 1058.74
margin_bottom = 285.486
rect_rotation = -10.4
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="popup" type="PopupDialog" parent="."]
margin_right = 1045.0
margin_bottom = 630.0
theme = ExtResource( 2 )

[node name="Label" type="Label" parent="popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -443.0
margin_top = -138.0
margin_right = 443.0
margin_bottom = 138.0
theme = ExtResource( 2 )
text = "code/design: Dario
earth model: CraigForster
music: Aviators"

[node name="CenterContainer2" type="CenterContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -275.0
margin_top = -175.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="about" type="Button" parent="CenterContainer2"]
margin_left = 30.0
margin_top = 32.0
margin_right = 245.0
margin_bottom = 142.0
theme = ExtResource( 2 )
text = "about"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="CenterContainer/VBoxContainer/ButtonEasy" to="." method="_on_ButtonEasy_button_down"]
[connection signal="button_down" from="CenterContainer/VBoxContainer/ButtonCasual" to="." method="_on_ButtonCasual_button_down"]
[connection signal="button_down" from="CenterContainer/VBoxContainer/ButtonHard" to="." method="_on_ButtonHard_button_down"]
[connection signal="button_down" from="CenterContainer/VBoxContainer/ButtonVeryHard" to="." method="_on_ButtonVeryHard_button_down"]
[connection signal="pressed" from="CenterContainer2/about" to="." method="_on_about_pressed"]
